# easel

./: .aider.chat.history.md  .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  agentic-ai-workflow.md  easel-spec.md  flake.nix  milestone-agent.md  plan.md  pyproject.toml
.aider.tags.cache.v4/: cache.db
.claude/: README.md  settings.local.json
.claude/agents/: README.md  analytics-specialist.md  doctor.md  implementation-specialist.md  qa-specialist.md  security-specialist.md  troubleshooting-specialist.md
.claude/commands/: README.md
adr/: README.md  adr-001-cli-framework-selection.md  adr-002-http-client-selection.md  adr-003-configuration-management.md  adr-004-output-formatting-architecture.md  adr-005-authentication-strategy.md  adr-template.md
easel/: __init__.py  __main__.py
easel/api/: __init__.py  auth.py  client.py  exceptions.py  models.py  pagination.py  rate_limit.py
easel/cli/: __init__.py  context.py  error_handlers.py  main.py
easel/config/: __init__.py  credentials.py  exceptions.py  manager.py  models.py  paths.py
easel/formatters/: __init__.py
easel/output/: __init__.py  base.py  columns.py  factory.py  formatters.py
easel/plugins/: __init__.py
logs/: brainstorm-2026-02-25.md  weekly-review-2026-02-22.md  weekly-review-2026-03-18.md
specs/: 01-core-infrastructure.md  02-read-only-commands.md  03-data-export-analytics.md  04-automation-features.md  05-production-readiness.md  06-distribution.md  README.md  implementation.md  pi-skills-support.md  planning.md  progress.md
tests/: conftest.py  test_smoke.py
tests/cli/: test_assessments.py  test_assignments.py  test_commands.py  test_config.py  test_config_defaults.py  test_courses.py  test_discussions.py  test_grading.py  test_modules.py  test_output.py  test_pages.py  test_rubrics.py
tests/core/: test_cache.py  test_client.py  test_config.py  test_config_files.py
tests/integration/: test_api_workflows.py  test_basic_workflows.py  test_cli_workflows.py  test_full_workflow.py
tests/services/: test_assessments.py  test_assignments.py  test_courses.py  test_discussions.py  test_grading.py  test_modules.py  test_pages.py  test_rubrics.py
tests/unit/: test_assignment_commands.py  test_course_commands.py  (+2 more)
(+73 files in other folders)
