[project]
name = "easel"
version = "0.1.0"
description = "Python CLI tool for Canvas LMS API access"
authors = [
    {name = "Jerid Francom"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "click (>=8.1.0,<9.0.0)",
    "httpx (>=0.24.0,<0.25.0)",
    "rich (>=13.0.0,<14.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "cryptography (>=3.0,<45.0)",
    "keyring (>=25.6.0,<26.0.0)"
]

[project.scripts]
easel = "easel.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
respx = "^0.20.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=easel",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401"
]

