[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easel"
version = "0.1.4"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "typer>=0.15",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "python-dateutil>=2.9",
  "rich>=13.0",
  "tomli-w>=1.0",
]

[project.scripts]
easel = "easel.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/easel"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
